discussion/kv_engine/138293/138293_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Move scope and collection stats to StatCollector interface

These stats will be exposed as part of the high cardinality Prometheus
endpoint. Prepare by moving relevant code to use the collector
interface rather than directly handling cookie and add_stat callbacks.

This patch does _not_ add relevant declarations to stats.def.h _yet_.
Doing so will require support for

* separating cbstats names from enum keys (some stats have the same
  name)
* generated vbucket prefixes

This will be resolved in a later patch, as neither point affects
Prometheus stats.

Change-Id: I5229c2b002ea9041d0cbd8f3a36bffeb4d220a48

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-10-29 10:13:09.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-29 10:50:52.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5353/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:4301:21: error: no matching constructor for initialization of "CBStatCollector" [clang-diagnostic-error]
    CBStatCollector collector(add_stat, cookie, getServerApi()->cookie);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/cbstat_collector.h:43:5: note: candidate constructor not viable: no known conversion from "ServerCookieIface *" to "ServerApi *" for 3rd argument
    CBStatCollector(const AddStatFn& addStatFn,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/cbstat_collector.h:35:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 3 were provided
class CBStatCollector : public StatCollector {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/cbstat_collector.h:35:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 3 were provided
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:4317:21: error: no matching constructor for initialization of "CBStatCollector" [clang-diagnostic-error]
    CBStatCollector collector(add_stat, cookie, getServerApi()->cookie);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/cbstat_collector.h:43:5: note: candidate constructor not viable: no known conversion from "ServerCookieIface *" to "ServerApi *" for 3rd argument
    CBStatCollector(const AddStatFn& addStatFn,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/cbstat_collector.h:35:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 3 were provided
class CBStatCollector : public StatCollector {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/cbstat_collector.h:35:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 3 were provided
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:2861:21: error: no matching constructor for initialization of "CBStatCollector" [clang-diagnostic-error]
    CBStatCollector cbcollector(
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/cbstat_collector.h:43:5: note: candidate constructor not viable: cannot convert argument of incomplete type "ServerCookieIface *" to "ServerApi *" for 3rd argument
    CBStatCollector(const AddStatFn& addStatFn,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/cbstat_collector.h:35:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 3 were provided
class CBStatCollector : public StatCollector {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/cbstat_collector.h:35:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 3 were provided

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5353/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:4301:21:
error: no matching constructor for initialization of "CBStatCollector" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5353/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27150/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:4301:21:
error: no matching constructor for initialization of "CBStatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27150/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31442/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(4301): error C2664: "CBStatCollector::CBStatCollector(CBStatCollector &&)": cannot convert argument 3 from "ServerCookieIface *" to "ServerApi *" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31442/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5771/ : FAILURE

Compile error at [2020-10-29T10:16:07.738Z] ../kv_engine/engines/ep/src/ep_engine.cc:4301:21:
error: no matching constructor for initialization of "CBStatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5771/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6830/ : FAILURE

Compile error at [2020-10-29T10:36:37.127Z] ../kv_engine/engines/ep/src/ep_engine.cc:4301:71:
error: no matching function for call to ?CBStatCollector::CBStatCollector(const AddStatFn&, const void*&, ServerCookieIface*&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6830/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6995/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14631/ : FAILURE

Compile error at [2020-10-29T10:41:59.018Z] ../kv_engine/engines/ep/src/ep_engine.cc:4301:21:
error: no matching constructor for initialization of "CBStatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14631/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6705/ : FAILURE

Compile error at [2020-10-29T10:29:55.400Z] ../kv_engine/engines/ep/src/ep_engine.cc:4301:71:
error: no matching function for call to ?CBStatCollector::CBStatCollector(const AddStatFn&, const void*&, ServerCookieIface*&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6705/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3882/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
